Fixed bug #50728 (All PDOExceptions hardcode 'code' property to 0)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@293447 c90b9560-bf6c-de11-be94-00142212c4b1